language/move-lang/tests/move_check/parser/function_acquires_bad_name.move
module M {
    // Test for an invalid (i.e., missing) resource name
    fun f() acquires {
    }
}
